# spam

./: author  cli.py  man_filler  run.sh  solve.py
try_filler/: pyproject.toml
try_filler/tests/: test_try_filler.py
try_filler/try_filler/: cli.py
