[tool.poetry]
name = "try_filler"
version = "0.1.4"
description = ""
authors = ["Team TRY"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
try_filler = "try_filler.cli:main"
